# exdata

./: .gitignore  Cargo.toml  README.md  config.toml.example  docker-compose.yml  websocket_api_research.md
docs/: ws-spreads.md
docs/plans/: 2026-01-30-exdata-design.md  2026-01-30-exdata-impl-plan.md  2026-01-31-pulse-websocket-realtime-spread-design.md  2026-02-01-validator-design.md  2026-02-01-validator-tolerance-relaxation-design.md  2026-02-01-ws-min-spread-filter-design.md  2026-02-01-ws-min-spread-filter-implementation.md  2026-02-01-ws-spreads-implementation.md  2026-02-09-ticker-snapshot-recorder-design.md  2026-02-26-spread-anomaly-detection-design.md  2026-02-26-spread-anomaly-impl-plan.md  2026-03-06-remove-validator-design.md
docs/superpowers/plans/: 2026-03-19-remove-bookticker-use-depth-for-bbo.md
docs/superpowers/specs/: 2026-03-19-remove-bookticker-use-depth-for-bbo-design.md
scripts/: requirements.txt  spread_anomaly.py
src/: api.rs  cache.rs  config.rs  main.rs  models.rs  recorder.rs  spread.rs  validator.rs  ws.rs
src/exchanges/: binance.rs  bitget.rs  bybit.rs  gate.rs  mod.rs  okx.rs  zoomex.rs
